# toric_code

./: LEGEND.md  PHYSICS.md  README.md  pyproject.toml
plots/: common.py  plot_00_ground_state.py  plot_01_electric_anyons.py  plot_01_magnetic_anyons.py  plot_02_electric_anyons.py  plot_02_magnetic_anyons.py  plot_03_x_string_transport.py  plot_03_x_string_transport_electric.py  plot_03_z_string_transport.py  plot_03_z_string_transport_magnetic.py  plot_04_z_string_bent.py  plot_05_z_string_homotopic.py  plot_06_contractible_x_loop.py  plot_07_noncontractible_x_loops.py  plot_08_ground_state_probabilities.py  plot_09_wilson_loop_eigenvalues.py  plot_10_braiding_e_m_anyons.py  plot_11_hadamard_braiding_phase.py
src/toric/: circuits.py  diagnostics.py  groups.py  lattice.py  loops.py  plot_groups.py  plots.py  stabilizers.py  state_prep.py
src/toric_code.egg-info/: SOURCES.txt  requires.txt
tests/: test_excitation_x.py  test_full_ground_state.py  test_ground_state.py  test_hadamard_loop.py  test_noncontractible_loop.py  test_string_visual.py  test_string_z.py  test_wilson_loop.py  test_wilson_loop_flip.py
